fist commit test request

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,14 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <script id="config" type="application/json">
+      {
+        "locale": "en",
+        "baseApi": "https://newsapi.org/v2/everything?q=Apple&from=2021-05-25&sortBy=popularity&apiKey=69343b2637a84511a1d25b320a1bd427"
+        
+      }
+
+    </script>
   </head>
   <body>
     <noscript>
