--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <script id="config" type="application/json">
       {
         "locale": "en",
-        "baseApi": "https://newsapi.org/v2/everything?q=digital economy&sortBy=popularity&page=2&apiKey=69343b2637a84511a1d25b320a1bd427"
+        "baseApi": "https://newsapi.org/v2"
         
       }
 
